[gd_scene load_steps=5 format=3 uid="uid://cradi2tym0i20"]

[ext_resource type="Script" uid="uid://dqamufag1agnv" path="res://scripts/gate.gd" id="1_xwxio"]
[ext_resource type="Texture2D" uid="uid://crtjnb16e641u" path="res://assets/colored.png" id="2_xwxio"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wi8tm"]
size = Vector2(12, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xwxio"]
size = Vector2(2, 2)

[node name="Gate" type="StaticBody2D"]
script = ExtResource("1_xwxio")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_wi8tm")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_xwxio")
region_enabled = true
region_rect = Rect2(527, 0, 16, 16)

[node name="PowerCheck" type="Area2D" parent="."]
position = Vector2(0, -8)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PowerCheck"]
shape = SubResource("RectangleShape2D_xwxio")

[node name="PowerCheck2" type="Area2D" parent="."]
position = Vector2(8, 0)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PowerCheck2"]
shape = SubResource("RectangleShape2D_xwxio")

[node name="PowerCheck3" type="Area2D" parent="."]
position = Vector2(0, 8)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PowerCheck3"]
shape = SubResource("RectangleShape2D_xwxio")

[node name="PowerCheck4" type="Area2D" parent="."]
position = Vector2(-8, 0)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PowerCheck4"]
shape = SubResource("RectangleShape2D_xwxio")
